# gv100ad-py

./: README.md  azure-pipelines.yml  pyproject.toml
src/gv100ad/: __init__.py  reader.py
src/gv100ad/entities/: base_record.py  district.py  district_type.py  federale_state.py  government_region.py  municipal_association.py  municipal_association_type.py  municipality.py  municipality_type.py  region.py
tests/: test_reader.py
